--- a/main.ipynb
+++ b/main.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('/content/PixelatedImageSegmentation')\n",
+    "\n",
     "from dataset import TorinoAquaDataset\n",
     "from model import AutoEncoder\n",
     "import os\n",
@@ -16,36 +19,39 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
+    "from utils import DiceLoss\n",
     "\n",
-    "LOAD_MODEL = True\n",
+    "LOAD_MODEL = False\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "model = AutoEncoder().to(device)\n",
-    "lossfn = torch.nn.BCEWithLogitsLoss()\n",
+    "lossfn = DiceLoss()\n",
     "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 2e-6, 10, 1e-4, verbose=True)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3)\n",
     "\n",
     "dataset = TorinoAquaDataset()\n",
-    "dataloader = DataLoader(dataset, 1, True)\n",
+    "dataloader = DataLoader(dataset, 1, True, num_workers=os.cpu_count())\n",
     "epochs = 50\n",
     "\n",
     "os.makedirs('TrainImg', exist_ok=True)\n",
     "if LOAD_MODEL:\n",
     "    model.load_state_dict(torch.load('model.pth'))\n",
     "\n",
+    "loss_sum_min = 2e9\n",
     "for epoch in range(epochs):\n",
     "    print('Epoch:', epoch+1)\n",
+    "    loss_sum = 0\n",
     "    for i, data in enumerate(tqdm(dataloader)):\n",
     "        inputs = data['input'].to(device)\n",
     "        label = data['mask'].to(device)\n",
     "        logits = model(inputs)\n",
-    "        loss = lossfn(logits, label)\n",
+    "        loss = lossfn(F.sigmoid(logits), label)\n",
     "        optim.zero_grad()\n",
     "        loss.backward()\n",
+    "        loss_sum += loss.item()\n",
     "        optim.step()\n",
-    "        scheduler.step(loss)\n",
     "        if (i+1)%50==0:\n",
-    "            print(loss)\n",
+    "            print(loss.item())\n",
     "            fig, axes = plt.subplots(1, 3, figsize=(50,20))\n",
     "            axes[0].set_title('input')\n",
     "            axes[0].imshow(inputs[0].cpu().numpy().transpose(1,2,0))\n",
@@ -53,9 +59,13 @@
     "            axes[1].imshow(label[0].cpu().numpy().transpose(1,2,0))\n",
     "            axes[2].set_title('predict')\n",
     "            axes[2].imshow(F.sigmoid(logits)[0].cpu().detach().numpy().transpose(1,2,0))\n",
-    "            plt.savefig(f'TrainImg/Epoch{epoch}_{i+1}')\n",
+    "            plt.savefig(f'TrainImg/Epoch{epoch+1}_{i+1}')\n",
     "            plt.close()\n",
-    "    torch.save(model.state_dict(), 'model.pth')"
+    "    scheduler.step(loss_sum)\n",
+    "    if loss_sum<loss_sum_min:\n",
+    "        loss_sum_min = loss_sum\n",
+    "        torch.save(model.state_dict(), 'model.pth')\n",
+    "        print(\"Model saved!\")"
    ]
   }
  ],
@@ -75,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
