--- a/main.ipynb
+++ b/main.ipynb
@@ -6,11 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/content/PixelatedImageSegmentation')\n",
-    "\n",
     "from dataset import TorinoAquaDataset\n",
-    "from model import AutoEncoder\n",
+    "from model import AutoEncoder, Unet\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -20,17 +17,19 @@
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from utils import DiceLoss\n",
+    "import torchvision\n",
     "\n",
     "LOAD_MODEL = False\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = AutoEncoder().to(device)\n",
-    "lossfn = DiceLoss()\n",
+    "model = Unet().to(device)\n",
+    "lossfn1 = DiceLoss()\n",
+    "lossfn2 = nn.L1Loss()\n",
     "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3)\n",
     "\n",
     "dataset = TorinoAquaDataset()\n",
-    "dataloader = DataLoader(dataset, 1, True, num_workers=os.cpu_count())\n",
+    "dataloader = DataLoader(dataset, 1, True, num_workers=2)\n",
     "epochs = 50\n",
     "\n",
     "os.makedirs('TrainImg', exist_ok=True)\n",
@@ -43,24 +42,29 @@
     "    loss_sum = 0\n",
     "    for i, data in enumerate(tqdm(dataloader)):\n",
     "        inputs = data['input'].to(device)\n",
-    "        label = data['mask'].to(device)\n",
+    "        mask = data['mask'].to(device)\n",
+    "        label = data['label'].to(device)\n",
     "        logits = model(inputs)\n",
-    "        loss = lossfn(F.sigmoid(logits), label)\n",
+    "        loss = lossfn1(logits[:,0,:,:], mask) + lossfn2(logits[:,1:,:,:], label)\n",
     "        optim.zero_grad()\n",
     "        loss.backward()\n",
     "        loss_sum += loss.item()\n",
     "        optim.step()\n",
-    "        if (i+1)%50==0:\n",
+    "        if (i+1)%200==0:\n",
     "            print(loss.item())\n",
-    "            fig, axes = plt.subplots(1, 3, figsize=(50,20))\n",
-    "            axes[0].set_title('input')\n",
-    "            axes[0].imshow(inputs[0].cpu().numpy().transpose(1,2,0))\n",
-    "            axes[1].set_title('label')\n",
-    "            axes[1].imshow(label[0].cpu().numpy().transpose(1,2,0))\n",
-    "            axes[2].set_title('predict')\n",
-    "            axes[2].imshow(F.sigmoid(logits)[0].cpu().detach().numpy().transpose(1,2,0))\n",
-    "            plt.savefig(f'TrainImg/Epoch{epoch+1}_{i+1}')\n",
-    "            plt.close()\n",
+    "            grid = torchvision.utils.make_grid([\n",
+    "                inputs[0],\n",
+    "                mask[0].repeat(3, 1, 1),\n",
+    "                label[0],\n",
+    "                logits[0,0,:,:].detach().repeat(3, 1, 1),\n",
+    "                logits[0,1:,:,:].detach()], \n",
+    "                5\n",
+    "            )\n",
+    "            torchvision.utils.save_image(\n",
+    "                grid,\n",
+    "                f'TrainImg/Epoch{epoch+1}_{i+1}.png'\n",
+    "            )\n",
+    "\n",
     "    scheduler.step(loss_sum)\n",
     "    if loss_sum<loss_sum_min:\n",
     "        loss_sum_min = loss_sum\n",
@@ -85,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
