--- a/main.ipynb
+++ b/main.ipynb
@@ -2,74 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset import TorinoAquaDataset\n",
-    "from model import AutoEncoder, Unet\n",
     "import os\n",
+    "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torchinfo import summary\n",
     "import torch.nn.functional as F\n",
-    "from torch.utils.data import DataLoader\n",
-    "from tqdm.auto import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "from utils import DiceLoss\n",
     "import torchvision\n",
-    "\n",
-    "LOAD_MODEL = False\n",
+    "from dataset import TorinoAquaDataset\n",
+    "from model import Unet, UnetReconstruct\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchinfo import summary\n",
+    "from tqdm.auto import tqdm\n",
+    "from utils import DiceLoss, MaskL1Loss\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = Unet().to(device)\n",
-    "lossfn1 = DiceLoss()\n",
-    "lossfn2 = nn.L1Loss()\n",
-    "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3)\n",
     "\n",
-    "dataset = TorinoAquaDataset()\n",
-    "dataloader = DataLoader(dataset, 1, True, num_workers=2)\n",
-    "epochs = 50\n",
-    "\n",
-    "os.makedirs('TrainImg', exist_ok=True)\n",
-    "if LOAD_MODEL:\n",
-    "    model.load_state_dict(torch.load('model.pth'))\n",
-    "\n",
-    "loss_sum_min = 2e9\n",
-    "for epoch in range(epochs):\n",
-    "    print('Epoch:', epoch+1)\n",
-    "    loss_sum = 0\n",
-    "    for i, data in enumerate(tqdm(dataloader)):\n",
-    "        inputs = data['input'].to(device)\n",
-    "        mask = data['mask'].to(device)\n",
-    "        label = data['label'].to(device)\n",
-    "        logits = model(inputs)\n",
-    "        loss = lossfn1(logits[:,0,:,:], mask) + lossfn2(logits[:,1:,:,:], label)\n",
-    "        optim.zero_grad()\n",
-    "        loss.backward()\n",
-    "        loss_sum += loss.item()\n",
-    "        optim.step()\n",
-    "        if (i+1)%200==0:\n",
-    "            print(loss.item())\n",
+    "if os.path.exists('modelUnet.pth') and os.path.exists('modelUnetReconstruct.pth'):\n",
+    "    modelUnet = Unet(0.5).to(device)\n",
+    "    modelUnet.load_state_dict(torch.load('modelUnet.pth'))\n",
+    "    modelUnetReconstruct = UnetReconstruct(0.75).to(device)\n",
+    "    modelUnetReconstruct.load_state_dict(torch.load('modelUnetReconstruct.pth'))\n",
+    "    dataset = TorinoAquaDataset()\n",
+    "    dataloader = DataLoader(dataset, 1, True)\n",
+    "    for i in range(10):\n",
+    "        with torch.inference_mode():\n",
+    "            data = next(iter(dataloader))['input'].to(device)\n",
+    "            out1 = modelUnet(data)\n",
+    "            out2 = modelUnetReconstruct(data)\n",
     "            grid = torchvision.utils.make_grid([\n",
-    "                inputs[0],\n",
-    "                mask[0].repeat(3, 1, 1),\n",
-    "                label[0],\n",
-    "                logits[0,0,:,:].detach().repeat(3, 1, 1),\n",
-    "                logits[0,1:,:,:].detach()], \n",
-    "                5\n",
-    "            )\n",
+    "                    data[0],\n",
+    "                    out1[0].repeat(3, 1, 1),\n",
+    "                    out2[0],\n",
+    "                    torch.where(out1[0] > 0.95, out2[0], data[0])], \n",
+    "                    2\n",
+    "                )\n",
+    "            os.makedirs('TrainImg', exist_ok=True)\n",
     "            torchvision.utils.save_image(\n",
     "                grid,\n",
-    "                f'TrainImg/Epoch{epoch+1}_{i+1}.png'\n",
-    "            )\n",
-    "\n",
-    "    scheduler.step(loss_sum)\n",
-    "    if loss_sum<loss_sum_min:\n",
-    "        loss_sum_min = loss_sum\n",
-    "        torch.save(model.state_dict(), 'model.pth')\n",
-    "        print(\"Model saved!\")"
+    "                f'TrainImg/Eval{i+1}.png'\n",
+    "            )"
    ]
   }
  ],
