--- a/mainUnet.ipynb
+++ b/mainUnet.ipynb
@@ -18,56 +18,114 @@
     "import matplotlib.pyplot as plt\n",
     "from utils import MaskL1Loss, DiceLoss\n",
     "import torchvision\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
-    "LOAD_MODEL = False\n",
+    "LOAD_CHECKPOINT = True\n",
+    "SAVE_EVERY_EPOCH = 1\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "model = Unet(0.5).to(device)\n",
-    "lossfn = DiceLoss()\n",
+    "lossfn = nn.BCELoss()\n",
     "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3, verbose=True)\n",
+    "plot_array = []\n",
+    "loss_sum_min = 2e9\n",
+    "start_epoch = 0\n",
     "\n",
     "dataset = TorinoAquaDataset()\n",
-    "dataloader = DataLoader(dataset, 1, True)#, num_workers=os.cpu_count())\n",
-    "epochs = 50\n",
+    "dataloader = DataLoader(dataset, 1, True, num_workers=1)\n",
+    "\n",
+    "writer = SummaryWriter()\n",
     "\n",
     "os.makedirs('TrainImg', exist_ok=True)\n",
-    "if LOAD_MODEL:\n",
-    "    model.load_state_dict(torch.load('modelUnet.pth'))\n",
+    "os.makedirs('TrainCheckpoint', exist_ok=True)\n",
     "\n",
-    "loss_sum_min = 2e9\n",
-    "for epoch in range(epochs):\n",
-    "    print('Epoch:', epoch+1)\n",
-    "    loss_sum = 0\n",
-    "    for i, data in enumerate(tqdm(dataloader)):\n",
-    "        inputs = data['input'].to(device)\n",
-    "        mask = data['mask'].to(device)\n",
-    "        label = data['label'].to(device)\n",
-    "        logits = model(inputs)\n",
-    "        loss = lossfn(logits, mask)\n",
-    "        optim.zero_grad()\n",
-    "        loss.backward()\n",
-    "        loss_sum += loss.item()\n",
-    "        optim.step()\n",
-    "        if (i+1)%200==0:\n",
-    "            print(loss.item())\n",
-    "            grid = torchvision.utils.make_grid([\n",
-    "                inputs[0],\n",
-    "                mask[0].repeat(3, 1, 1),\n",
-    "                label[0],\n",
-    "                logits[0].repeat(3, 1, 1)], \n",
-    "                2\n",
-    "            )\n",
-    "            torchvision.utils.save_image(\n",
-    "                grid,\n",
-    "                f'TrainImg/Epoch{epoch+1}_{i+1}.png'\n",
-    "            )\n",
+    "if LOAD_CHECKPOINT:\n",
+    "    checkpoint_file = torch.load('TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
+    "    model.load_state_dict(checkpoint_file['model'])\n",
+    "    optim.load_state_dict(checkpoint_file['optim'])\n",
+    "    scheduler.load_state_dict(checkpoint_file['scheduler'])\n",
+    "    loss_sum_min = checkpoint_file['loss_sum_min']\n",
+    "    plot_array = checkpoint_file['plot_array']\n",
+    "    start_epoch = checkpoint_file['epoch']\n",
+    "    print('Checkpoint loaded!')\n",
     "\n",
-    "    scheduler.step(loss_sum)\n",
-    "    if loss_sum<loss_sum_min:\n",
-    "        loss_sum_min = loss_sum\n",
-    "        torch.save(model.state_dict(), 'modelUnet.pth')\n",
-    "        print(\"Model saved!\")"
+    "def plot_loss():\n",
+    "    fig, axe = plt.subplots(1, 2, figsize=(16,9))\n",
+    "    axe[0].plot(range(1, 1+len(plot_array)),plot_array, linestyle='-', marker='o', color='b', label='Loss')\n",
+    "    axe[0].set_xlabel('Epoch')\n",
+    "    axe[0].set_ylabel('Loss')\n",
+    "    axe[0].grid(True)\n",
+    "    axe[0].legend()\n",
+    "\n",
+    "    axe[1].plot(range(1, 1+len(plot_array)),plot_array, linestyle='-', marker='o', color='b', label='Loss')\n",
+    "    axe[1].set_xlabel('Epoch')\n",
+    "    axe[1].set_yscale('log')\n",
+    "    axe[1].grid(True)\n",
+    "    axe[1].legend()\n",
+    "    plt.show()\n",
+    "    return\n",
+    "\n",
+    "def train(epochs=50):\n",
+    "    global loss_sum_min\n",
+    "    for epoch in range(start_epoch+1, start_epoch+1+epochs):\n",
+    "        print('Epoch:', epoch)\n",
+    "        loss_sum = 0\n",
+    "        for i, data in enumerate(tqdm(dataloader)):\n",
+    "            inputs = data['input'].to(device)\n",
+    "            mask = data['mask'].to(device)\n",
+    "            label = data['label'].to(device)\n",
+    "            logits = model(inputs)\n",
+    "            loss = lossfn(logits, mask)\n",
+    "            optim.zero_grad()\n",
+    "            loss.backward()\n",
+    "            loss_sum += loss.item()\n",
+    "            optim.step()\n",
+    "            if (i+1)%100==0:\n",
+    "                print(loss.item())\n",
+    "                grid = torchvision.utils.make_grid([\n",
+    "                    inputs[0],\n",
+    "                    mask[0].repeat(3, 1, 1),\n",
+    "                    label[0],\n",
+    "                    logits[0].repeat(3, 1, 1)], \n",
+    "                    2\n",
+    "                )\n",
+    "                writer.add_image('Images', grid, epoch)\n",
+    "                torchvision.utils.save_image(\n",
+    "                    grid,\n",
+    "                    f'TrainImg/Epoch{epoch}_{i+1}.png'\n",
+    "                )\n",
+    "\n",
+    "        scheduler.step(loss_sum)\n",
+    "        plot_array.append(loss_sum)\n",
+    "        writer.add_scalar('Loss', loss_sum, epoch)\n",
+    "\n",
+    "        if loss_sum<loss_sum_min:\n",
+    "            loss_sum_min = loss_sum\n",
+    "            torch.save({\n",
+    "                'model': model.state_dict(),\n",
+    "                'optim': optim.state_dict(),\n",
+    "                'scheduler': scheduler.state_dict(),\n",
+    "                'loss_sum_min': loss_sum_min,\n",
+    "                'plot_array': plot_array,\n",
+    "                'epoch': epoch\n",
+    "            }, 'TrainCheckpoint/'+model.__class__.__name__+'CheckpointBest.pth')\n",
+    "            print('Best model checkpoint saved!')\n",
+    "\n",
+    "        if epoch % SAVE_EVERY_EPOCH == 0:\n",
+    "            torch.save({\n",
+    "                'model': model.state_dict(),\n",
+    "                'optim': optim.state_dict(),\n",
+    "                'scheduler': scheduler.state_dict(),\n",
+    "                'loss_sum_min': loss_sum_min,\n",
+    "                'plot_array': plot_array,\n",
+    "                'epoch': epoch\n",
+    "            }, 'TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
+    "            print('Checkpoint saved!')\n",
+    "    return\n",
+    "\n",
+    "train(100)\n",
+    "plot_loss()"
    ]
   }
  ],
