add vggloss, uresnet

--- a/mainUResnet.ipynb
+++ b/mainUResnet.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from dataset import TorinoAquaDataset\n",
-    "from models.Unet import Unet\n",
+    "from models.Unet import UResNet\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -16,7 +16,7 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils import MaskL1Loss, DiceLoss\n",
+    "from utils import VGGLoss\n",
     "import torchvision\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
@@ -24,15 +24,14 @@
     "SAVE_EVERY_EPOCH = 1\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = Unet(0.5).to(device)\n",
-    "lossfn = nn.BCELoss()\n",
+    "model = UResNet(0.5).to(device)\n",
+    "lossfn = VGGLoss(device)\n",
     "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3, verbose=True)\n",
     "plot_array = []\n",
     "loss_sum_min = 2e9\n",
     "start_epoch = 0\n",
     "\n",
-    "dataset = TorinoAquaDataset()\n",
+    "dataset = TorinoAquaDataset(no_mask=-1)\n",
     "dataloader = DataLoader(dataset, 1, True, num_workers=1)\n",
     "\n",
     "writer = SummaryWriter()\n",
@@ -44,7 +43,6 @@
     "    checkpoint_file = torch.load('TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
     "    model.load_state_dict(checkpoint_file['model'])\n",
     "    optim.load_state_dict(checkpoint_file['optim'])\n",
-    "    scheduler.load_state_dict(checkpoint_file['scheduler'])\n",
     "    loss_sum_min = checkpoint_file['loss_sum_min']\n",
     "    plot_array = checkpoint_file['plot_array']\n",
     "    start_epoch = checkpoint_file['epoch']\n",
@@ -73,10 +71,9 @@
     "        loss_sum = 0\n",
     "        for i, data in enumerate(tqdm(dataloader)):\n",
     "            inputs = data['input'].to(device)\n",
-    "            mask = data['mask'].to(device)\n",
     "            label = data['label'].to(device)\n",
     "            logits = model(inputs)\n",
-    "            loss = lossfn(logits, mask)\n",
+    "            loss = lossfn(logits, label)\n",
     "            optim.zero_grad()\n",
     "            loss.backward()\n",
     "            loss_sum += loss.item()\n",
@@ -85,10 +82,9 @@
     "                print(loss.item())\n",
     "                grid = torchvision.utils.make_grid([\n",
     "                    inputs[0],\n",
-    "                    mask[0].repeat(3, 1, 1),\n",
     "                    label[0],\n",
-    "                    logits[0].repeat(3, 1, 1)], \n",
-    "                    2\n",
+    "                    logits[0].detach()], \n",
+    "                    3\n",
     "                )\n",
     "                writer.add_image('Images', grid, epoch)\n",
     "                torchvision.utils.save_image(\n",
@@ -96,7 +92,6 @@
     "                    f'TrainImg/Epoch{epoch}_{i+1}.png'\n",
     "                )\n",
     "\n",
-    "        scheduler.step(loss_sum)\n",
     "        plot_array.append(loss_sum)\n",
     "        writer.add_scalar('Loss', loss_sum, epoch)\n",
     "\n",
@@ -105,7 +100,6 @@
     "            torch.save({\n",
     "                'model': model.state_dict(),\n",
     "                'optim': optim.state_dict(),\n",
-    "                'scheduler': scheduler.state_dict(),\n",
     "                'loss_sum_min': loss_sum_min,\n",
     "                'plot_array': plot_array,\n",
     "                'epoch': epoch\n",
@@ -116,16 +110,21 @@
     "            torch.save({\n",
     "                'model': model.state_dict(),\n",
     "                'optim': optim.state_dict(),\n",
-    "                'scheduler': scheduler.state_dict(),\n",
     "                'loss_sum_min': loss_sum_min,\n",
     "                'plot_array': plot_array,\n",
     "                'epoch': epoch\n",
     "            }, 'TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
     "            print('Checkpoint saved!')\n",
-    "    return\n",
-    "\n",
-    "train(100)\n",
-    "plot_loss()"
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(100)"
    ]
   }
  ],
