--- a/mainUResnetGAN.ipynb
+++ b/mainUResnetGAN.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from dataset import TorinoAquaDataset\n",
-    "from models.Unet import Unet\n",
+    "from models.Unet import UResNet, Discriminator\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -24,15 +24,17 @@
     "SAVE_EVERY_EPOCH = 1\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = Unet(0.5).to(device)\n",
-    "lossfn = nn.BCELoss()\n",
+    "model = UResNet(0.5).to(device)\n",
+    "modelD = Discriminator().to(device)\n",
+    "lossfn = nn.BCEWithLogitsLoss()\n",
     "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optim, 'min', 0.8, 3, verbose=True)\n",
+    "optimD = torch.optim.Adam(modelD.parameters(), lr=1e-4)\n",
+    "\n",
     "plot_array = []\n",
-    "loss_sum_min = 2e9\n",
+    "plot_arrayD = []\n",
     "start_epoch = 0\n",
     "\n",
-    "dataset = TorinoAquaDataset()\n",
+    "dataset = TorinoAquaDataset(no_mask=-1)\n",
     "dataloader = DataLoader(dataset, 1, True, num_workers=1)\n",
     "\n",
     "writer = SummaryWriter()\n",
@@ -43,22 +45,25 @@
     "if LOAD_CHECKPOINT and os.path.exists('TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth'):\n",
     "    checkpoint_file = torch.load('TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
     "    model.load_state_dict(checkpoint_file['model'])\n",
+    "    modelD.load_state_dict(checkpoint_file['modelD'])\n",
     "    optim.load_state_dict(checkpoint_file['optim'])\n",
-    "    scheduler.load_state_dict(checkpoint_file['scheduler'])\n",
-    "    loss_sum_min = checkpoint_file['loss_sum_min']\n",
+    "    optimD.load_state_dict(checkpoint_file['optimD'])\n",
     "    plot_array = checkpoint_file['plot_array']\n",
+    "    plot_arrayD = checkpoint_file['plot_arrayD']\n",
     "    start_epoch = checkpoint_file['epoch']\n",
     "    print('Checkpoint loaded!')\n",
     "\n",
     "def plot_loss():\n",
     "    fig, axe = plt.subplots(1, 2, figsize=(16,9))\n",
-    "    axe[0].plot(range(1, 1+len(plot_array)),plot_array, linestyle='-', marker='o', color='b', label='Loss')\n",
+    "    axe[0].plot(range(1, 1+len(plot_array)), plot_array, linestyle='-', marker='o', color='b', label='Loss')\n",
+    "    axe[0].plot(range(1, 1+len(plot_array)), plot_arrayD, linestyle='-', marker='o', color='r', label='LossD')\n",
     "    axe[0].set_xlabel('Epoch')\n",
     "    axe[0].set_ylabel('Loss')\n",
     "    axe[0].grid(True)\n",
     "    axe[0].legend()\n",
     "\n",
-    "    axe[1].plot(range(1, 1+len(plot_array)),plot_array, linestyle='-', marker='o', color='b', label='Loss')\n",
+    "    axe[1].plot(range(1, 1+len(plot_array)), plot_array, linestyle='-', marker='o', color='b', label='Loss')\n",
+    "    axe[1].plot(range(1, 1+len(plot_array)), plot_arrayD, linestyle='-', marker='o', color='r', label='LossD')\n",
     "    axe[1].set_xlabel('Epoch')\n",
     "    axe[1].set_yscale('log')\n",
     "    axe[1].grid(True)\n",
@@ -67,28 +72,37 @@
     "    return\n",
     "\n",
     "def train(epochs=50):\n",
-    "    global loss_sum_min\n",
     "    for epoch in range(start_epoch+1, start_epoch+1+epochs):\n",
     "        print('Epoch:', epoch)\n",
     "        loss_sum = 0\n",
+    "        loss_sumD = 0\n",
     "        for i, data in enumerate(tqdm(dataloader)):\n",
     "            inputs = data['input'].to(device)\n",
-    "            mask = data['mask'].to(device)\n",
     "            label = data['label'].to(device)\n",
+    "\n",
     "            logits = model(inputs)\n",
-    "            loss = lossfn(logits, mask)\n",
+    "            outputD_fake = modelD(logits)\n",
+    "            loss = lossfn(outputD_fake, torch.ones_like(outputD_fake))\n",
     "            optim.zero_grad()\n",
     "            loss.backward()\n",
     "            loss_sum += loss.item()\n",
     "            optim.step()\n",
+    "\n",
+    "            outputD_real = modelD(label)\n",
+    "            outputD_fake = modelD(logits.detach())\n",
+    "            lossD = lossfn(outputD_fake, torch.zeros_like(outputD_fake)) + lossfn(outputD_real, torch.ones_like(outputD_real))\n",
+    "            optimD.zero_grad()\n",
+    "            lossD.backward()\n",
+    "            loss_sumD += lossD.item()\n",
+    "            optimD.step()\n",
+    "\n",
     "            if (i+1)%200==0:\n",
     "                print(loss.item())\n",
     "                grid = torchvision.utils.make_grid([\n",
     "                    inputs[0],\n",
-    "                    mask[0].repeat(3, 1, 1),\n",
     "                    label[0],\n",
-    "                    logits[0].repeat(3, 1, 1)], \n",
-    "                    2\n",
+    "                    F.sigmoid(logits[0].detach())], \n",
+    "                    3\n",
     "                )\n",
     "                writer.add_image('Images', grid, epoch)\n",
     "                torchvision.utils.save_image(\n",
@@ -96,36 +110,32 @@
     "                    f'TrainImg/Epoch{epoch}_{i+1}.png'\n",
     "                )\n",
     "\n",
-    "        scheduler.step(loss_sum)\n",
     "        plot_array.append(loss_sum)\n",
+    "        plot_arrayD.append(loss_sumD)\n",
     "        writer.add_scalar('Loss', loss_sum, epoch)\n",
-    "\n",
-    "        if loss_sum<loss_sum_min:\n",
-    "            loss_sum_min = loss_sum\n",
-    "            torch.save({\n",
-    "                'model': model.state_dict(),\n",
-    "                'optim': optim.state_dict(),\n",
-    "                'scheduler': scheduler.state_dict(),\n",
-    "                'loss_sum_min': loss_sum_min,\n",
-    "                'plot_array': plot_array,\n",
-    "                'epoch': epoch\n",
-    "            }, 'TrainCheckpoint/'+model.__class__.__name__+'CheckpointBest.pth')\n",
-    "            print('Best model checkpoint saved!')\n",
     "\n",
     "        if epoch % SAVE_EVERY_EPOCH == 0:\n",
     "            torch.save({\n",
     "                'model': model.state_dict(),\n",
+    "                'modelD': modelD.state_dict(),\n",
     "                'optim': optim.state_dict(),\n",
-    "                'scheduler': scheduler.state_dict(),\n",
-    "                'loss_sum_min': loss_sum_min,\n",
+    "                'optimD': optimD.state_dict(),\n",
     "                'plot_array': plot_array,\n",
+    "                'plot_arrayD': plot_arrayD,\n",
     "                'epoch': epoch\n",
     "            }, 'TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
     "            print('Checkpoint saved!')\n",
-    "    return\n",
-    "\n",
-    "train(100)\n",
-    "plot_loss()"
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_loss()\n",
+    "train(20)"
    ]
   }
  ],
