--- a/mainUResnetGAN.ipynb
+++ b/mainUResnetGAN.ipynb
@@ -16,7 +16,7 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils import MaskL1Loss, DiceLoss\n",
+    "from utils import MaskL1Loss, DiceLoss, VGGLoss\n",
     "import torchvision\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
@@ -26,7 +26,8 @@
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "model = UResNet(0.5).to(device)\n",
     "modelD = Discriminator().to(device)\n",
-    "lossfn = nn.BCEWithLogitsLoss()\n",
+    "lossfn = nn.MSELoss()\n",
+    "vggloss = VGGLoss(device)\n",
     "optim = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
     "optimD = torch.optim.Adam(modelD.parameters(), lr=1e-4)\n",
     "\n",
@@ -82,7 +83,7 @@
     "\n",
     "            logits = model(inputs)\n",
     "            outputD_fake = modelD(logits)\n",
-    "            loss = lossfn(outputD_fake, torch.ones_like(outputD_fake))\n",
+    "            loss = lossfn(outputD_fake, torch.ones_like(outputD_fake)) + vggloss(logits, label)\n",
     "            optim.zero_grad()\n",
     "            loss.backward()\n",
     "            loss_sum += loss.item()\n",
@@ -97,11 +98,11 @@
     "            optimD.step()\n",
     "\n",
     "            if (i+1)%200==0:\n",
-    "                print(loss.item())\n",
+    "                print('Loss:', loss.item(), 'LossD:', lossD.item())\n",
     "                grid = torchvision.utils.make_grid([\n",
     "                    inputs[0],\n",
     "                    label[0],\n",
-    "                    F.sigmoid(logits[0].detach())], \n",
+    "                    logits[0].detach()], \n",
     "                    3\n",
     "                )\n",
     "                writer.add_image('Images', grid, epoch)\n",
@@ -125,17 +126,9 @@
     "                'epoch': epoch\n",
     "            }, 'TrainCheckpoint/'+model.__class__.__name__+'CheckpointLast.pth')\n",
     "            print('Checkpoint saved!')\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_loss()\n",
-    "train(20)"
+    "    return\n",
+    "\n",
+    "train(200)"
    ]
   }
  ],
