add mask to input

--- a/mainUResnetGAN.ipynb
+++ b/mainUResnetGAN.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from dataset import TorinoAquaDataset\n",
-    "from models.Unet import UResNet, Discriminator\n",
+    "from models.Unet import Discriminator\n",
+    "from models.Lama import Lama\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -24,7 +25,7 @@
     "SAVE_EVERY_EPOCH = 1\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = UResNet(0.5).to(device)\n",
+    "model = Lama(1/8, 4, 3).to(device)\n",
     "modelD = Discriminator().to(device)\n",
     "lossfn = nn.MSELoss()\n",
     "vggloss = VGGLoss(device)\n",
@@ -80,10 +81,12 @@
     "        for i, data in enumerate(tqdm(dataloader)):\n",
     "            inputs = data['input'].to(device)\n",
     "            label = data['label'].to(device)\n",
+    "            mask = data['mask'].to(device)\n",
     "\n",
-    "            logits = model(inputs)\n",
+    "            logits = model(torch.cat([inputs, mask], dim=1))\n",
+    "            logits = torch.where(mask>0.95, logits, label)\n",
     "            outputD_fake = modelD(logits)\n",
-    "            loss = lossfn(outputD_fake, torch.ones_like(outputD_fake)) + vggloss(logits, label)\n",
+    "            loss = 10*lossfn(outputD_fake, torch.ones_like(outputD_fake)) + 2*vggloss(logits, label) + lossfn(logits, label)\n",
     "            optim.zero_grad()\n",
     "            loss.backward()\n",
     "            loss_sum += loss.item()\n",
@@ -98,7 +101,7 @@
     "            optimD.step()\n",
     "\n",
     "            if (i+1)%200==0:\n",
-    "                print('Loss:', loss.item(), 'LossD:', lossD.item())\n",
+    "                print('Loss:', loss_sum, 'LossD:', loss_sumD)\n",
     "                grid = torchvision.utils.make_grid([\n",
     "                    inputs[0],\n",
     "                    label[0],\n",
