--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checkpoint loaded!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dataset import TorinoAquaDataset\n",
-    "from models.Unet import Discriminator, Unet2\n",
+    "from models.Unet2 import Unet2\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
