--- a/mainGAN.ipynb
+++ b/mainGAN.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from dataset import TorinoAquaDataset\n",
-    "from models.Unet import Discriminator, Unet2\n",
+    "from models.Unet2 import Unet2\n",
+    "from models.Discriminator import Discriminator\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -24,7 +25,7 @@
     "SAVE_EVERY_EPOCH = 1\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = Unet2(1).to(device)\n",
+    "model = Unet2(0.25).to(device)\n",
     "modelD = Discriminator().to(device)\n",
     "lossfn = nn.MSELoss()\n",
     "vggloss = VGGLoss(device)\n",
