--- a/mainGAN.ipynb
+++ b/mainGAN.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from dataset import TorinoAquaDataset\n",
-    "from models.Unet2 import Unet2\n",
+    "from models.Lama import LamaUnet\n",
     "from models.Discriminator import Discriminator\n",
     "import os\n",
     "import torch\n",
@@ -25,7 +25,7 @@
     "SAVE_EVERY_EPOCH = 1\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = Unet2(0.25).to(device)\n",
+    "model = LamaUnet(0.5).to(device)\n",
     "modelD = Discriminator().to(device)\n",
     "lossfn = nn.MSELoss()\n",
     "vggloss = VGGLoss(device)\n",
@@ -36,7 +36,7 @@
     "plot_arrayD = []\n",
     "start_epoch = 0\n",
     "\n",
-    "dataset = TorinoAquaDataset('G:\\\\Datasets\\\\FFHQ', no_mask=-1, factor=(10, 15))\n",
+    "dataset = TorinoAquaDataset(no_mask=-1, factor=(10, 15))\n",
     "dataloader = DataLoader(dataset, 1, True, num_workers=1)\n",
     "\n",
     "writer = SummaryWriter()\n",
@@ -83,15 +83,15 @@
     "            label = data['label'].to(device)\n",
     "\n",
     "            logits = model(inputs)\n",
-    "            outputD_fake = modelD(logits)\n",
-    "            loss = lossfn(outputD_fake, torch.ones_like(outputD_fake)) + 100*vggloss(logits, label) + lossfn(logits, label)\n",
+    "            outputD_fake = modelD(inputs, logits)\n",
+    "            loss = lossfn(outputD_fake, torch.ones_like(outputD_fake)) + 2*vggloss(logits, label) + lossfn(logits, label)\n",
     "            optim.zero_grad()\n",
     "            loss.backward()\n",
     "            loss_sum += loss.item()\n",
     "            optim.step()\n",
     "\n",
-    "            outputD_real = modelD(label)\n",
-    "            outputD_fake = modelD(logits.detach())\n",
+    "            outputD_real = modelD(inputs, label)\n",
+    "            outputD_fake = modelD(inputs, logits.detach())\n",
     "            lossD = lossfn(outputD_fake, torch.zeros_like(outputD_fake)) + lossfn(outputD_real, torch.ones_like(outputD_real))\n",
     "            optimD.zero_grad()\n",
     "            lossD.backward()\n",
